--- a/DeepLMTProvider/Sdl.Community.DeelLMTProvider/UI/Controls/ClearButtonTextBox.xaml
+++ b/DeepLMTProvider/Sdl.Community.DeelLMTProvider/UI/Controls/ClearButtonTextBox.xaml
@@ -4,6 +4,7 @@
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
              mc:Ignorable="d"
+             Name="ClearButton_TextBox"
              d:DesignHeight="450"
              d:DesignWidth="800">
     <UserControl.Resources>
@@ -22,7 +23,7 @@
                    Grid.Column="0" />
         <TextBox Name="Filter_TextBox"
                  Grid.Column="1"
-                 Text="{Binding Text, RelativeSource={RelativeSource AncestorType=UserControl}, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}"
+                 Text="{Binding Text, ElementName=ClearButton_TextBox, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}"
                  MinWidth="200"
                  KeyDown="Filter_TextBox_OnKeyDown"
                  TextChanged="Filter_TextBox_OnTextChanged"
