--- a/DeepLMTProvider/Sdl.Community.DeelLMTProvider/UI/Controls/EditableTextBlock.xaml
+++ b/DeepLMTProvider/Sdl.Community.DeelLMTProvider/UI/Controls/EditableTextBlock.xaml
@@ -2,6 +2,7 @@
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
+             Name="Editable_TextBlock"
              xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
              mc:Ignorable="d" 
              d:DesignHeight="450" d:DesignWidth="800">
@@ -16,7 +17,7 @@
         <TextBlock Name="TextBlock"
                    Visibility="Visible"
                    TextWrapping="Wrap"
-                   Text="{Binding Text, RelativeSource={RelativeSource AncestorType=UserControl}, Mode=TwoWay}" />
+                   Text="{Binding Text, ElementName=Editable_TextBlock, Mode=TwoWay}" />
 
         <TextBox Name="EditBox"
                  Foreground="SlateGray"
@@ -24,6 +25,6 @@
                  LostFocus="EditBox_OnLostFocus"
                  TextWrapping="Wrap"
                  Visibility="Collapsed"
-                 Text="{Binding Text, RelativeSource={RelativeSource AncestorType=UserControl}, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}" />
+                 Text="{Binding Text, ElementName=Editable_TextBlock, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}" />
     </Grid>
 </UserControl>
