--- a/DeepLMTProvider/Sdl.Community.DeelLMTProvider/UI/GlossariesWindow.xaml
+++ b/DeepLMTProvider/Sdl.Community.DeelLMTProvider/UI/GlossariesWindow.xaml
@@ -3,33 +3,41 @@
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
+        xmlns:tradosControls="http://schemas.trados.com/xaml"
+        xmlns:controls="clr-namespace:Sdl.Community.DeepLMTProvider.UI.Controls"
+        xmlns:converters="clr-namespace:Sdl.Community.DeepLMTProvider.UI.Converters"
         xmlns:uiHelpers="clr-namespace:Sdl.Community.DeepLMTProvider.UI.UiHelpers"
         xmlns:viewModel="clr-namespace:Sdl.Community.DeepLMTProvider.ViewModel"
-        xmlns:converters="clr-namespace:Sdl.Community.DeepLMTProvider.UI.Converters"
-        xmlns:controls="clr-namespace:Sdl.Community.DeepLMTProvider.UI.Controls"
-        xmlns:tradosControls="http://schemas.trados.com/xaml"
         mc:Ignorable="d"
         d:DataContext="{d:DesignInstance Type=viewModel:GlossariesWindowViewModel}"
         d:DesignHeight="450"
-        MaxWidth="600"
         Title="DeepL Glossaries"
         Icon="../Resources/deepL_logo_new.png"
         MaxHeight="600"
+        MinWidth="425"
+        MinHeight="172"
+        Name="Glossaries_Window"
+        Width="435"
         WindowStartupLocation="CenterScreen"
         WindowStyle="None">
 
     <Window.InputBindings>
         <KeyBinding Key="E"
-                    Modifiers="Control"
+                    Modifiers="Alt"
                     Command="{Binding EditGlossaryCommand}" />
         <KeyBinding Key="Q"
-                    Modifiers="Control"
-                    Command="{Binding ImportGlossaryCommand}" />
+                    Modifiers="Alt"
+                    Command="{Binding ImportGlossariesCommand}" />
         <KeyBinding Key="Delete"
                     Command="{Binding DeleteGlossariesCommand}" />
-        <KeyBinding Key="Escape" Command="{Binding EscapeCommand, RelativeSource={RelativeSource AncestorType=Window}}"/>
-
-
+        <KeyBinding Key="Escape"
+                    Command="{Binding EscapeCommand, ElementName=Glossaries_Window}" />
+        <KeyBinding Key="A"
+                    Modifiers="Alt"
+                    Command="{Binding AddNewGlossaryCommand}" />
+        <KeyBinding Key="X"
+                    Modifiers="Alt"
+                    Command="{Binding ExportCommand, ElementName=Glossaries_Window}" />
     </Window.InputBindings>
 
     <Window.Resources>
@@ -48,14 +56,8 @@
                         Value="HighQuality" />
             </Style>
 
-            <Style TargetType="Button" BasedOn="{StaticResource Sdl.Button.EmbeddedStyle}">
-                <Setter Property="Focusable"
-                        Value="False" />
-            </Style>
-            
-            <Style TargetType="DataGridCell">
-                <Setter Property="Focusable"
-                        Value="True" />
+            <Style TargetType="Button"
+                   BasedOn="{StaticResource Sdl.Button.EmbeddedStyle}">
             </Style>
 
             <converters:AddAllItemConverter x:Key="AddAllItemConverter" />
@@ -91,11 +93,13 @@
                                      x:Name="Filter_TextBox"
                                      Text="{Binding FilterQuery, Mode=TwoWay}"
                                      Height="20"
+                                     Margin="0 0 0 -10"
                                      HorizontalAlignment="Right" />
 
         <DataGrid Grid.Row="2"
                   AutoGenerateColumns="False"
                   Margin="0 5 0 0"
+                  AutomationProperties.Name="Glossaries"
                   CanUserDeleteRows="False"
                   CanUserSortColumns="True"
                   SelectionMode="Single"
@@ -124,7 +128,7 @@
             <DataGrid.Resources>
                 <DataTemplate x:Key="CheckAllHeaderTemplate">
                     <CheckBox HorizontalContentAlignment="Center"
-                              IsChecked="{Binding DataContext.IsCheckAll, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged, RelativeSource={RelativeSource AncestorType=Window}}"
+                              IsChecked="{Binding DataContext.IsCheckAll, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged, ElementName=Glossaries_Window}"
                               VerticalAlignment="Center" />
                 </DataTemplate>
             </DataGrid.Resources>
@@ -177,8 +181,9 @@
                     <DataGridTemplateColumn.CellTemplate>
                         <DataTemplate>
                             <Button Content="📝"
-                                    ToolTip="Edit glossary (Ctrl+E)"
-                                    Command="{Binding DataContext.EditGlossaryCommand, RelativeSource={RelativeSource AncestorType=Window}}"/>
+                                    AutomationProperties.Name="Edit glossary"
+                                    ToolTip="Edit glossary (Alt+E)"
+                                    Command="{Binding DataContext.EditGlossaryCommand, ElementName=Glossaries_Window}" />
                         </DataTemplate>
                     </DataGridTemplateColumn.CellTemplate>
                 </DataGridTemplateColumn>
@@ -190,18 +195,20 @@
 
             <Button DockPanel.Dock="Left"
                     Margin="0 0 2 0"
-                    ToolTip="Add new glossary"
+                    AutomationProperties.Name="Add new glossary"
+                    ToolTip="Add new glossary (Alt+A)"
                     Command="{Binding AddNewGlossaryCommand}"
                     Content="➕" />
 
             <Button Content="📂"
                     Margin="0 0 5 0"
+                    AutomationProperties.Name="Import glossaries"
                     FontSize="18"
-                    Command="{Binding ImportGlossaryCommand}"
+                    Command="{Binding ImportGlossariesCommand}"
                     HorizontalAlignment="Center">
                 <Button.ToolTip>
                     <TextBlock>
-                         Import glossaries (Ctrl+Q)
+                         Import glossaries (Alt+Q)
                          <LineBreak />
                          While importing, ensure unique filenames to avoid duplicates, which will be ignored.
                     </TextBlock>
@@ -210,8 +217,10 @@
 
             <Button Margin="0 0 5 0"
                     Height="25"
+                    Name="Export_Button"
+                    AutomationProperties.Name="Export glossaries"
                     Click="ExportButton_Click"
-                    ToolTip="Export selected glossaries">
+                    ToolTip="Export selected glossaries (Alt+X)">
 
                 <Button.ContextMenu>
                     <ContextMenu>
@@ -236,7 +245,7 @@
                             <Setter Property="Stroke"
                                     Value="Black" />
                             <Style.Triggers>
-                                <DataTrigger Binding="{Binding IsMouseOver, RelativeSource={RelativeSource AncestorType=Button}}"
+                                <DataTrigger Binding="{Binding IsMouseOver, ElementName=Export_Button}"
                                              Value="True">
                                     <Setter Property="Fill"
                                             Value="Red" />
@@ -252,9 +261,10 @@
             <Button Content="🗑️"
                     Margin="-5 0 0 0"
                     Click="DeleteButton_Click"
+                    AutomationProperties.Name="Delete glossary"
                     ToolTip="Delete selected glossaries (Delete)"
                     FontSize="16"
-                    HorizontalAlignment="Center"/>
+                    HorizontalAlignment="Center" />
         </StackPanel>
 
         <Button Content="Cancel"
@@ -263,10 +273,9 @@
                 Grid.Row="3"
                 Visibility="{Binding IsLoading, Converter={StaticResource BooleanToVisibilityConverter}}"
                 Command="{Binding CancelCommand}"
-                ToolTip="Cancel operation"
-                Style="{StaticResource Sdl.Button.EmbeddedStyle}" />
+                ToolTip="Cancel operation" />
 
-        <Button Content="Ok"
+        <Button Content="OK"
                 Name="Ok_Button"
                 Grid.Row="3"
                 HorizontalAlignment="Right"
