--- a/DeepLMTProvider/Sdl.Community.DeelLMTProvider/UI/DeepLWindow.xaml
+++ b/DeepLMTProvider/Sdl.Community.DeelLMTProvider/UI/DeepLWindow.xaml
@@ -112,6 +112,13 @@
 
             <CheckBox Style="{StaticResource Sdl.Checkbox.GenericStyle}"
                       VerticalContentAlignment="Center"
+                      Name="DecodeHtmlAndUrl"
+                      IsChecked="{Binding DecodeHtmlOrUrl}"
+                      Content="Decode HTML and URL encoding"
+                      Margin="10,0,0,5" />
+            
+            <CheckBox Style="{StaticResource Sdl.Checkbox.GenericStyle}"
+                      VerticalContentAlignment="Center"
                       Name="PlainText"
                       IsChecked="{Binding SendPlainText}"
                       Content="Translate as plain text"
