--- a/LanguageWeaverProvider/View/CredentialsMainView.xaml
+++ b/LanguageWeaverProvider/View/CredentialsMainView.xaml
@@ -14,6 +14,8 @@
 		xmlns:converters="clr-namespace:LanguageWeaverProvider.Converters"
 		mc:Ignorable="d"
 		d:DataContext="{d:DesignInstance local:CredentialsMainViewModel}"
+		BorderThickness="1"
+		BorderBrush="#c0c0c0"
 		WindowStartupLocation="CenterScreen"
 		Title="Language Weaver Provider"
 		ResizeMode="NoResize"
@@ -60,6 +62,8 @@
 
 			<style:WindowsControl Grid.Row="0"
 								  Margin="0 24" />
+			
+			
 
 			<Border Grid.Row="1"
 					Visibility="{Binding IsServiceSelected, Converter={StaticResource BooleanToVisibilityConverter}}"
@@ -78,6 +82,34 @@
 						<RowDefinition Height="*" />
 						<RowDefinition Height="Auto" />
 					</Grid.RowDefinitions>
+
+					<TextBox Style="{StaticResource Sdl.TextBox.BorderlessReadOnlyStyle}"
+							 Cursor="Arrow"
+							 Visibility="{Binding ProviderView.IsCredentialsSelected, Converter={StaticResource BooleanToVisibilityConverter}}"
+							 Text="You've chosen User Credentials Authentication. Please enter your email and password to proceed."
+							 FontSize="14"
+							 HorizontalAlignment="Center" />
+
+					<StackPanel Grid.Row="0"
+								Visibility="{Binding ProviderView.IsSecretSelected, Converter={StaticResource BooleanToVisibilityConverter}}">
+						<TextBox Grid.Row="0"
+								 Style="{StaticResource Sdl.TextBox.BorderlessReadOnlyStyle}"
+								 Cursor="Arrow"
+								 Text="You've chosen Client Secret Authentication. Please provide the generated client secret for access."
+								 Visibility="{Binding ProviderView.IsSecretSelected, Converter={StaticResource BooleanToVisibilityConverter}}"
+								 FontSize="14"
+								 HorizontalAlignment="Center" />
+						<Button Style="{StaticResource Sdl.Button.HyperLinkStyle}"
+								Command="{Binding OpenHyperlinkCommand}"
+								CommandParameter="{x:Static root:Constants.LanguageWeaverEUPortal}"
+								Cursor="Hand"
+								Margin="16 8 16 0">
+							<Button.Content>
+								<TextBlock Text="Please note that only administrators can retrieve the Client ID and Client Secret from the Language Weaver website."
+										   TextWrapping="Wrap" />
+							</Button.Content>
+						</Button>
+					</StackPanel>
 
 					<TextBox Grid.Row="0"
 							 Style="{StaticResource Sdl.TextBox.BorderlessReadOnlyStyle}"
